k8s/workloads/suwayomi/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suwayomi
  labels:
    app: suwayomi
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suwayomi
  template:
    metadata:
      labels:
        app: suwayomi
    spec:
      nodeSelector:
        platform.io/type: main
      securityContext:
        fsGroup: 1000
      containers:
        - name: suwayomi
          securityContext:
            runAsUser: 1000
          image: ghcr.io/suwayomi/suwayomi-server:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 4567
          volumeMounts:
            - name: config
              mountPath: /home/suwayomi/.local/share/Tachidesk
            - name: data
              mountPath: /home/suwayomi/downloads
              subPath: manga
        # - name: flaresolverr
        #   image: ghcr.io/flaresolverr/flaresolverr:latest
        #   ports:
        #     - containerPort: 8191
        #   env:
        #     - name: LOG_LEVEL
        #       value: "info"
        # - name: gluetun
        #   image: qmcgaw/gluetun:latest
        #   securityContext:
        #     capabilities:
        #       add: ["NET_ADMIN"]
        #     privileged: true
        #   envFrom:
        #     - secretRef:
        #         name: gluetun
        #   env:
        #     - name: TZ
        #       value: Etc/UTC
        #     - name: VPN_TYPE
        #       value: wireguard
        #     - name: DNS_KEEP_NAMESERVER
        #       value: "on"
        #     - name: FIREWALL_OUTBOUND_SUBNETS
        #       value: "10.42.0.0/15"
        #     - name: FIREWALL_VPN_INPUT_PORTS
        #       value: "4567,8191"
        #     - name: FIREWALL_INPUT_PORTS
        #       value: "4567,8191"
        #     - name: HEALTH_SERVER_ADDRESS
        #       value: "0.0.0.0:9999"
        #     - name: FIREWALL
        #       value: "off"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: data
          persistentVolumeClaim:
            claimName: data
---
apiVersion: v1
kind: Service
metadata:
  name: suwayomi
spec:
  ports:
    - port: 80
      targetPort: 4567
  selector:
    app: suwayomi
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: suwayomi

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`suwayomi.remini.site`)
      kind: Rule
      services:
        - name: suwayomi
          port: 80
